--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
-    /* Path Aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
+  "include": ["src", "vite.config.ts"],
+  "exclude": ["node_modules", "dist", "supabase/functions"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
