--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.56.2",
     "@types/papaparse": "^5.3.16",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
