--- a/package.json
+++ b/package.json
@@ -76,8 +76,11 @@
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/supabase__auth-ui-react": "^0.4.8",
+    "@types/supabase__auth-ui-shared": "^0.1.8",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
